--- a/docs/Javastudy/算术运算符.md
+++ b/docs/Javastudy/算术运算符.md
@@ -38,7 +38,7 @@ System.out.println(-10 % -3); // -1
 //10 % -3 => 10 - 10 / (-3) * (-3) = -10 + 9 = -1
 //-10 % -3 => (-10) - (-10) / (-3) * (-3) = -10 + 9 = -1
 ```
-- ++**的使用**
+- `++`**的使用**
 ```java
 int i = 10;
 i++;//自增，等价于 i = i + 1;
@@ -49,7 +49,7 @@ int j = 8;
 int k = ++j; //等价于 j = j + 1; k = j; 先自增再赋值：两个都是9
 int k = j++; //等价于 k = j; j = j + 1; 先赋值再自增：k是8，j是9
 ```
-- --以此类推
+- `--`以此类推
 ---
 #### 面试题
 - 1、题
