--- a/docs/Javastudy/控制结构.md
+++ b/docs/Javastudy/控制结构.md
@@ -1,6 +1,7 @@
 ---
 dg-publish: "true"
 ---
+[[index|返回目录]]
 - **控制结构**
 	- [[顺序控制]]  
 	- [[分支控制(if, else, switch)]] 
@@ -8,5 +9,4 @@ dg-publish: "true"
 	- [[break]]  
 	- [[continue]]  
 	- [[return]]  
-
 
