--- a/docs/Javastudy/控制结构.md
+++ b/docs/Javastudy/控制结构.md
@@ -6,7 +6,8 @@ dg-publish: "true"
 	- [[顺序控制]]  
 	- [[分支控制(if, else, switch)]] 
 	- [[循环控制(for, while, do while, 多重循环)]] #⭐️ 
-	- [[break]]  
-	- [[continue]]  
-	- [[return]]  
+	- 跳转控制语句
+    	- [[break]]  
+    	- [[continue]]  
+    	- [[return]]  
 
