--- a/docs/Javastudy/第三章作业.md
+++ b/docs/Javastudy/第三章作业.md
@@ -1,6 +1,7 @@
 ---
 dg-publish: "true"
 ---
+[[练习题|返回]]
 - [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=15.8&p=60) 
 - ---
 - #### 1、程序阅读题，看看输出什么？
