--- a/docs/Javastudy/练习题.md
+++ b/docs/Javastudy/练习题.md
@@ -1,6 +1,7 @@
 ---
 dg-publish: "true"
 ---
+[[index|返回目录]]
 - 第三章 变量
 	- [[练习题-数据类型转换]] 
 	- [[第三章作业]] 
@@ -19,3 +20,4 @@ dg-publish: "true"
 	- [[练习题-多重循环控制]] 
 	- [[练习题-break]] 
 	- [[练习题-五角星]] 
+	- [[练习题-控制结构]] 
