--- a/docs/Javastudy/if单分支案例01.md
+++ b/docs/Javastudy/if单分支案例01.md
@@ -1,6 +1,7 @@
 ---
 dg-publish: "true"
 ---
+[[分支控制(if, else, switch)|返回]]
 - 程序要求：编写一个程序，可以输入人的年龄，如果该同志的年龄大于18岁，则输出“你年龄大于18，要对自己的行为负责，送入监狱”
 ```java
 import java.util.Scanner;
