--- a/docs/Javastudy/if双分支案例01.md
+++ b/docs/Javastudy/if双分支案例01.md
@@ -1,6 +1,7 @@
 ---
 dg-publish: "true"
 ---
+[[分支控制(if, else, switch)|返回]]
 - 编写一个程序，可以输入人的年龄，如果该同志的年龄大于18岁，则输出“你年龄大于18，要对自己的行为负责，送入监狱。”。否则，输出“你的年龄不大，这次放过你了。”
 ```java
 import java.util.Scanner;
