--- a/docs/Javastudy/三元运算符.md
+++ b/docs/Javastudy/三元运算符.md
@@ -1,6 +1,8 @@
 ---
 dg-publish: "true"
 ---
+[[运算符|返回]]
+
 - $Ternary~Operator$
 - [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=0.0&p=78) 
 - 语法：`条件表达式?表达式1:表达式2;` 
