--- a/docs/Javastudy/标识符命名规则和规范.md
+++ b/docs/Javastudy/标识符命名规则和规范.md
@@ -1,6 +1,8 @@
 ---
 dg-publish: "true"
 ---
+[[运算符|返回]]
+
 - [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=1&p=84) 
 #### 标识符概念
 - 1、Java对各种变量、方法和类等命名时使用的字符序列称为标识符
