--- a/docs/Javastudy/运算符优先级.md
+++ b/docs/Javastudy/运算符优先级.md
@@ -1,6 +1,8 @@
 ---
 dg-publish: "true"
 ---
+[[运算符|返回]]
+
 
 |       | 运算符优先级排序，向下依次递减                      |                         |
 | ----- | ------------------------------------ | ----------------------- |
