--- a/docs/Javastudy/键盘输入语句.md
+++ b/docs/Javastudy/键盘输入语句.md
@@ -1,6 +1,8 @@
 ---
 dg-publish: "true"
 ---
+[[运算符|返回]]
+
 - [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=9.9&p=86) 
 - 需要接收用户输入的数据，可以使用键盘输入语句`Input.java`，需要一个扫描器(对象)`Scanner`
 ---
