--- a/docs/Javastudy/位运算符.md
+++ b/docs/Javastudy/位运算符.md
@@ -1,6 +1,8 @@
 ---
 dg-publish: "true"
 ---
+[[运算符|返回]]  
+
 - [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=13.3&p=98) 
 - - -
 #### [[位运算思考题]] 
