--- a/docs/Javastudy/算术运算符.md
+++ b/docs/Javastudy/算术运算符.md
@@ -1,7 +1,7 @@
 ---
 dg-publish: "true"
 ---
-
+[[运算符|返回]]
 #### 运算符一览
 
 | 运算符      | 运算                               | 范例                         | 结果                     |
