--- a/docs/Javastudy/练习题-控制结构.md
+++ b/docs/Javastudy/练习题-控制结构.md
@@ -8,8 +8,8 @@
 - [第五题 读代码](#第五题-读代码)
 - [第六题 不能被5整除](#第六题-不能被5整除)
 - [第七题 输出字母](#第七题-输出字母)
-- [第八题 计算](#第八题-计算)
-- [第九题 计算](#第九题-计算)
+- [第八题 计算1](#第八题-计算1)
+- [第九题 计算2](#第九题-计算2)
 #### 第一题 路口
 >1、编程实现如下功能  
 >某人有100,000元，每经过一次路口，需要交费；规则如下：  
@@ -93,7 +93,25 @@ public class Prcatice503 {
 >4、判断一个整数是否是水仙花数，所谓水仙花数，是指一个3位数，其各个位上数字立方和等于其本身。例如：$153=1*1*1+3*3*3+5*5*5$
 
 ```java
-public class 
+import java.util.Scanner;
+public class Practice504 {
+    public static void main(String[] args){
+        Scanner myScanner = new Scanner(System.in);
+        System.out.println("请输入一个三位数整数");
+        int num = myScanner.nextInt();
+        //获取百位的数字
+        int a = num / 100;
+        //获取十位数字
+        int b = (num % 100) / 10;
+        //获取个位数字
+        int c = (num % 100) % 10;
+        if(num == a*a*a + b*b*b + c*c*c  ){
+            System.out.println(num + "是水仙花数");
+        }else{
+            System.out.println(num + "不是水仙花数");
+        }
+    }
+}
 ```
 
 ---
@@ -110,9 +128,9 @@ public class
 >7、输出小写的a-z以及大写的Z-A
 
 
-#### 第八题 计算
+#### 第八题 计算1
 >8、求出$1-\frac{1}{2}+\frac{1}{3}-\frac{1}{4}+…+\frac{1}{100}$的和
 
 
-#### 第九题 计算
+#### 第九题 计算2
 >9、求出$1+(1+2)+(1+2+3)+(1+2+3+4)+…+(1+2+3+…+100)$的结果
