--- a/docs/Javastudy/练习题-控制结构.md
+++ b/docs/Javastudy/练习题-控制结构.md
@@ -1,4 +1,5 @@
-[[练习题|返回]]
+
+[返回](练习题.md)
 
 
 - [第一题 路口](#第一题-路口)
@@ -11,7 +12,7 @@
 - [第八题 计算1](#第八题-计算1)
 - [第九题 计算2](#第九题-计算2)
 #### 第一题 路口
->1、编程实现如下功能  
+>1、编程实现如下功能
 >某人有100,000元，每经过一次路口，需要交费；规则如下：  
 >1）当现金>50,000时，每次交5%  
 >2）当现金＜=50,000时，每次交1000  
@@ -118,7 +119,21 @@ public class Practice504 {
 #### 第五题 读代码
 >5、看看下面代码输出什么？
 ![alt text](https://raw.githubusercontent.com/Stolorzs/Picgo/master/%E6%88%AA%E5%B1%8F2024-04-3022.49.04.png)
+```java
+class Demo{
+    public static void main(String[] args){
+        int m = 0, n = 3;
+        if(m > 0){
+            if (n　> 2)
+                System.out.pritnln("OK1");
+            else
+                System.out.println("OK2");
+        }
+    }
+}
+```
 
+---
 
 #### 第六题 不能被5整除
 >6、输出1-100之间的不能被5整除的数，每5个一行
