--- a/docs/Javastudy/数据类型.md
+++ b/docs/Javastudy/数据类型.md
@@ -22,7 +22,7 @@ a-->x[整数类型] & y[浮点类型]
 
 ```
 
-| 关键字         | 数据类型      | bit   | ==内存== | 名称  | 备注                                                   |
+| 关键字         | 数据类型      | bit   | **内存**| 名称  | 备注                                                   |
 | ----------- | --------- | ----- | ------ | --- | ---------------------------------------------------- |
 | [[byte]]    | 整数类型      | 8bit  | 1个字节   | 字节  | 范围：$-128至127$                                        |
 | [[short]]   | 整数类型      | 16bit | 2个字节   | 短整型 | 范围：$-2^{15}至2^{15}-1即$$-32768至32767$                 |
@@ -40,16 +40,16 @@ a-->x[整数类型] & y[浮点类型]
 ---
 #### 整数类型说明
 - Java整数类型有固定的的范围和字段长度，以保证可移植性
-- Java整型常量默认为int型，声明==long型==常量后必须加`l`或`L` 
+- Java整型常量默认为int型，声明**long型**常量后必须加`l`或`L` 
 - Java程序中常用变量为int型，除非不足以表示大数
 - bit是计算机中最小的存储单位。byte是计算机中最基本的存储单元
 	- 1byte = 8bit——[[二进制]] 
 ---
 #### 浮点类型说明
-- 浮点数的存放形式：浮点数 = ==符号位== + 指数位 + 尾数位
-- 尾数部分可能丢失，造成精度损失 (==小数都是近似值==)
+- 浮点数的存放形式：浮点数 = **符号位** + 指数位 + 尾数位
+- 尾数部分可能丢失，造成精度损失 (**小数都是近似值**)
 - 固定字段+固定范围=可移值性
-- 默认是double，声明==float型==后必须加`f`或`F`——[空降](https://www.bilibili.com/video/BV1fh411y7R8?t=119.0&p=44) 
+- 默认是double，声明**float型**后必须加`f`或`F`——[空降](https://www.bilibili.com/video/BV1fh411y7R8?t=119.0&p=44) 
 	- double型后可以加上`d`或`D` 
 ```java
 float num1 = 1.1;   //错
@@ -60,9 +60,9 @@ double num5 = .123 //等价于0.123
 ```
 - 科学计数法：$5.12e2=5.12\times10^{2}$    $5.12e{-2}=5.12\times10^{-2}$
 	- 计算前有double类型，结果会保留double类型
-- ==通常情况==下使用==double==类型
-- ==浮点数的陷阱==——[空降](https://www.bilibili.com/video/BV1fh411y7R8?t=112.9&p=45) 
-	- **重要的使用点**——对小数(==尤其是进行运算后的==)进行==相等判断==时要小心
+- **通常情况**下使用**double**类型
+- **浮点数的陷阱**——[空降](https://www.bilibili.com/video/BV1fh411y7R8?t=112.9&p=45) 
+	- **重要的使用点**——对小数(**尤其是进行运算后的**)进行**相等判断**时要小心
 	- 应该是以两个数的差值的绝对值，在某个精度范围内判断
 ```java
 double num11 = 2.7;    //2.7
