--- a/docs/Javastudy/数组、排序和查找.md
+++ b/docs/Javastudy/数组、排序和查找.md
@@ -1,10 +1,12 @@
 ---
 dg-publish: "true"
 ---
-[[index|返回目录]]
+[返回目录](index.md)
 
-#### 数组
+# 数组、排序和查找 
+- [数组](数组.md)
+- [排序](排序.md)
+- [查找](查找.md)
+- [多维数组](多维数组.md)
 
-#### 排序
 
-#### 查找
