--- a/docs/Javastudy/练习题-控制结构.md
+++ b/docs/Javastudy/练习题-控制结构.md
@@ -105,7 +105,7 @@ public class Practice504 {
         //获取十位数字
         int b = (num % 100) / 10;
         //获取个位数字
-        int c = (num % 100) % 10;
+        int c = (num % 100) % 10;//改：num % 10
         if(num == a*a*a + b*b*b + c*c*c  ){
             System.out.println(num + "是水仙花数");
         }else{
@@ -118,7 +118,6 @@ public class Practice504 {
 ---
 #### 第五题 读代码
 >5、看看下面代码输出什么？
-![alt text](https://raw.githubusercontent.com/Stolorzs/Picgo/master/%E6%88%AA%E5%B1%8F2024-04-3022.49.04.png)
 ```java
 class Demo{
     public static void main(String[] args){
@@ -137,15 +136,129 @@ class Demo{
 
 #### 第六题 不能被5整除
 >6、输出1-100之间的不能被5整除的数，每5个一行
+```java
+public class Practice506 {
+    public static void main(String[] args){
+        //定义1-100的数字
+        int num = 1;
+        //定义序号，每行有5个
+        int i = 1;
+        //进入循环
+        while(num <= 100 ){
+            //满足每行序号不到5且筛选后的数字 被打印
+            if(i <= 5 && num % 5 != 0){
+                System.out.print(num + "\t");
+                i++;
+            }
+            // 序号超过5则打印换行符并更新序号为1
+            else if(i > 5){
+                System.out.println("");
+                i = 1;
+                continue;
+            }
+            //数字增加
+            num++;
+        }
+    }
+}
+```
+```java 
+//改：
+/*
+1、先输出1-100所有数
+2、过滤输出，输出不能被5整除的数 i % 5 != 0
+3、每5个一行，使用int count 统计输出的个数 count % 5 = 0,说明已经输出了5个
+*/
+public class Practice506 {
+    public static void main(String[] args){
+        int count = 0;
+        for(int = 1; i <= 100; i++){
+            if(i % 5 != 0){
+                count++;
+                System.out.print(i + " ");
+                //每5个换一行
+                if(count % 5 == 0){
+                    System.out.println("");
+                }
+            }
+        }
+    }
+}
+```
 
-
+---
 #### 第七题 输出字母
 >7、输出小写的a-z以及大写的Z-A
+```java
+public class Practice507 {
+    public static void main(String[] args){
+        char a = 'a';
+        char b = 'A';
+        for(int i = 1; i <=26; i++){
+            System.out.println(a + "\t" + b);
+            a++;
+            b++;
+        }
+    }
+}
+```
 
-
+---
 #### 第八题 计算1
->8、求出$1-\frac{1}{2}+\frac{1}{3}-\frac{1}{4}+…+\frac{1}{100}$的和
+>8、求出$1-\frac{1}{2}+\frac{1}{3}-\frac{1}{4}+…-\frac{1}{100}$的和
 
+```java
+public class Practice508 {
+    public static void main(String[] args){
+        double a = 1;
+        double sum = 0;
+        for(a = 1; a<= 99; a += 2){
+            sum += (1 / a - 1 / (a + 1));
+        }
+        System.out.println("结果为" + sum);
+    }
+}
+```
+```java
+//改：
+public class Practice508 {
+    public static void main(String[] args){
+        double sum = 0;
+        for (int i = 0; i <= 100; i++){
+            if(i / 2 != 0){
+                sum += 1.0 / i;//注意数据结构
+            }else{
+                sum -= 1.0 / i;
+            }
+        }
+        System.out.print("和为" + sum);
+    }
+}
+```
 
+---
 #### 第九题 计算2
 >9、求出$1+(1+2)+(1+2+3)+(1+2+3+4)+…+(1+2+3+…+100)$的结果
+
+```java
+public class Practice509 {
+    public static void main(String[] args){
+        //定义外层循环变量
+        int a = 1;
+        //定义总和
+        int sumTatal = 0;
+        //定义局部求和
+        int sum = 0;
+        for(a = 1; a <= 100; a++){
+            for(int b = 1 ; b <= a; b++){
+                sum += b;
+            }
+            //总和累计
+            sumTatal += sum;
+            //局部和清0
+            sum = 0;
+        }
+        System.out.println("和为" + sumTatal);
+    }
+}
+```
