--- a/docs/Javastudy/变量.md
+++ b/docs/Javastudy/变量.md
@@ -52,8 +52,7 @@ class Text{
 #### [[数据类型]] #⭐️ 
 
 ---
-#### [[基本数据类型转换]] #⭐️ 
-- [[练习题-数据类型转换]] 
+#### [[基本数据类型转换]] #⭐️ ：[[练习题-数据类型转换]] 
 
 ---
 #### [[String和基本数据类型转换]] 
