--- a/docs/Javastudy/排序.md
+++ b/docs/Javastudy/排序.md
@@ -1,4 +1,88 @@
 [返回](数组、排序和查找.md)
 
 # 排序
+- 介绍：排序是将多个数据，依指定的顺序进行排列的过程
+- 排序的分类：
+- 1、内部排序
+  - 指将需要处理的所有数据都加载到内部存储器中进行排序。包括(**交换式排序法**、**选择式排序法**和**插入式排序法**)
+- 2、外部排序：
+  - 数据量过大，无法全部加载到内存中，需要借助外部存储进行排序，包括(**合并排序法**和**直接合并排序法**)
+  
+## 冒泡排序
+- [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=44.7&p=174)
+- $Bubble Sorting$：通过对待排序序列从后向前(从下标较大的元素开始)，依次比较相邻元素的值，若发现逆序则交换，使较大的元素逐渐从前移向后部，就像水底的气泡一样逐渐向上冒。
 
+>案例：将五个无序：24, 69, 80, 57, 13的数使用冒泡排序法将其排成一个**从小到大**的有序数列
+
+
+> **分析冒泡排序:** <br>
+> 数组：{**24,69,80,57,13**}<br>
+> 第一轮排序：目标把最大数放在最后<br>
+> 第1次比较：{**24,69**,80,57,13} 不变<br> 
+> 第2次比较：{24,**69,80**,57,13} 不变<br>
+> 第3次比较：{24,69,**57,80**,13} <br>
+> 第4次比较：{24,69,57,**13,80**} <br>
+>
+> 第二轮排序：目标把第二大的数放在倒数第二位置<br>
+> 第1次比较：{**24,69**,57,13,80} <br>
+> 第2次比较：{24,**57,69**,13,80} <br>
+> 第3次比较：{24,57,**13,69**,80} <br>
+>
+> 第三轮排序：目标把第三大的数放在倒数第三位置<br>
+> 第1次比较：{**24,57**,13,69,80}  <br>
+> 第2次比较：{24,**13,57**,69,80}  <br>
+>
+> 第四轮排序：目标把第四大的数放在倒数第四的位置<br>
+> 第1次比较：{**13,24**,57,69,80}  <br>
+>
+- 冒牌排序特点：
+  - 1、一共有5个元素，进行了4轮排序，可以看成4次外层循环
+  - 2、每1轮排序可以确定一个数的位置：第1轮确定最大数，第2轮排序确定第2大数
+  - 3、当进行比较时，如果 86 > 57 则进行交换
+  - 4、每一轮比较次数在减少
+
+```java
+//做题
+public class BubbleSort {
+    public static void main(String[] args){
+        int temp = 0;
+        int[] arr = {24,69,80,57,13};
+        for(int i = 0; i < arr.length - 1; i++){
+            for(int j = 0; j < arr.length - 1 - i; j++){
+                if(arr[j] >= arr[j + 1]){
+                    temp = arr[j + 1];
+                    arr[j + 1] = arr[j];
+                    arr[j] = temp;
+                }
+            }
+        } 
+        System.out.println("====从小到大排序好如下====");
+        for(int i = 0; i < arr.length; i++){
+            System.out.print(arr[i] + "\t");
+        }
+    }
+}
+```
+```java
+//改：
+public class BubbleSort {
+    public static void main(String[] args){
+        int[] arr = {24,69,80,57,13};
+        int temp = 0;
+        for(int i = 0; i < arr.length - 1 ; i++){
+            for(int j = 0; j < arr.length - 1 - i; j++){
+                if(arr[j] >= arr[j + 1]){
+                    temp = arr[j + 1];
+                    arr[j + 1] = arr[j];
+                    arr[j] = temp;
+                }
+            } 
+            System.out.println("==第" + (i + 1) + "轮排序==");
+            for(int j = 0; j < arr.length; j++){
+                System.out.print(arr[j] + "\t");
+            }
+            System.out.println("");
+        }
+    }
+}
+```
