--- a/docs/Javastudy/数组.md
+++ b/docs/Javastudy/数组.md
@@ -7,13 +7,18 @@
   - [数组的使用](#数组的使用)
   - [使用细节](#使用细节)
   - [数组赋值机制](#数组赋值机制)
+  - [数组拷贝](#数组拷贝)
+  - [数组反转](#数组反转)
+  - [数组扩容](#数组扩容)
+  - [数组缩减](#数组缩减)
+
 ## 介绍
 - 可以存放**多个**同一类型的数据。数组也是一种数据类型，是引用类型。  
 - 数组就是一组数据
 ——[数据类型](数据类型.md)
 
 ## 案例
-- [ ] [数组案例](数组案例)
+- [ ] [数组案例](数组案例.md)
 - [ ] [练习题-数组应用](练习题-数组应用.md)
 
 ## 数组的使用
@@ -76,12 +81,29 @@ System.out.println(arr[4]);
 ```
 - 7、数组属于引用类型，数组型数据是**对象(object)**
 ## 数组赋值机制
+#⭐
 <span id= "jump"> </sapn>
 
-- [数组赋值案例](数组赋值案例.md)
 - 1、对比：**基本数据类型赋值**，这个值就是具体的数据，互相不影响  
 `int n1 = 2; int n2 = n1;`  
 - 2、数组在默认下是引用传递，赋的值是地址
+- [ ] [数组赋值案例](数组赋值案例.md)
 
+## 数组拷贝
+- 编写代码：实现数组拷贝`ArrayCopy.java`
+- 将`int[] arr1 = {10,20,30};`拷贝到`arr2`中，要求数据空间是独立的
+- [ ] [数组拷贝案例](数组拷贝案例.md)
 
+## 数组反转
+- [ ] [数组反转](数组反转.md)
 
+## 数组扩容
+
+- 要求：实现动态的给数组条件元素效果，实现对数组的扩容。`ArrayAdd.java`
+  - 1、原始的数组使用静态分配 `int[]arr = {1,2,3};`
+  - 2、增加的元素，直接放在数组的最后 `arr = {1,2,3,4}`
+  - 3、用户可以通过如下方法来决定是否继续添加,添加成功，是否继续 `y/n`
+- [ ] [数组扩容](数组扩容)
+
+## 数组缩减
+- [ ] [数组缩减](数组缩减)
