--- a/docs/Javastudy/控制结构.md
+++ b/docs/Javastudy/控制结构.md
@@ -4,11 +4,11 @@ dg-publish: "true"
 [[index|返回目录]]
 
 - **控制结构**
-	- [[顺序控制]]  
-	- [[分支控制(if, else, switch)]] 
-	- [[循环控制(for, while, do while, 多重循环)]] #⭐️ 
-	- 跳转控制语句
-    	- [[break]]  
-    	- [[continue]]  
-    	- [[return]]  
+	- [ ] [[顺序控制]]  
+	- [ ] [[分支控制(if, else, switch)]] 
+	- [ ] [[循环控制(for, while, do while, 多重循环)]] #⭐️ 
+	- [ ] 跳转控制语句
+    	- [ ] [[break]]  
+    	- [ ] [[continue]]  
+    	- [ ] [[return]]  
 
