--- a/docs/Javastudy/数组赋值案例.md
+++ b/docs/Javastudy/数组赋值案例.md
@@ -1,4 +1,8 @@
-[返回](数组.md#数组赋值机制)
+[返回](./数组.md#数组赋值机制)
+
+- 1、对比：基本数据类型赋值，这个值就是具体的数据，互相不影响  
+`int n1 = 2; int n2 = n1;`
+- 2、数组在默认下是引用传递，赋的值是地址
 
 ```java
 public class ArrayAssign {
@@ -20,5 +24,43 @@ public class ArrayAssign {
     }
 }
 ```
+ - 值传递和引用传递的区别
+```mermaid
+graph LR;
+subgraph "JVM内存:值传递(值拷贝)"
+    subgraph 栈
+        n1-->a[10]
+        n2-->|值拷贝|b[10]
+        c[n2]-->|重新赋值|d[80]
+    end
+    subgraph 堆
+    end
+    subgraph 方法区
+    end
+end
+```
+
+```mermaid
+graph LR;
+subgraph "JVM内存:引用传递"
+    subgraph 栈
+        arr1-->a["0x0011(地址)"]
+        arr2-->|拷贝地址|a["0x0011(地址)"]
+    end
+    subgraph 堆
+        subgraph "0x0011(地址)"
+            b1["1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"]
+            b2["2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"]
+            b3["3&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"]
+        end
+        b1-->b11["arr1[0]"]
+        b2-->b22["arr1[0]"]
+        b3-->b33["arr1[0]"]
+    end
+    subgraph 方法区
+    end
+end
+```
+
 
 
