--- a/docs/Javastudy/查找.md
+++ b/docs/Javastudy/查找.md
@@ -1,4 +1,50 @@
 [返回](数组、排序和查找.md)
 
 # 查找
+- [空降](https://www.bilibili.com/video/BV1fh411y7R8?t=0.7&p=175)
+
+- 介绍：Java中，常用的查找有两种：
+- 1、顺序查找
+  - 依次匹配，返回匹配值 
+- 2、二分查找
+  - 有序数组，先从中间查找，再比较大小向前向后查找
+
+## 顺序查找 
+
+> 案例1：有一个数列：**白眉鹰王、金毛狮王、紫衫龙王、青翼蝠王**猜数游戏：从键盘中任意输入一个名称，判断数列中是否包含此名称〖顺序查找〗  
+> 要求：如果找到了就提示找到，并给出下标值  
+> 
+>案例2：请对一个有序数列进行二分查找{1,8,10,89,1000,1234} 输入一个数看看该数组是否存在此数，并且求出下标，如果没有就提示“没有这个数”。
+
+`SeqSearch.java`
+```java
+import java.util.Scanner;
+public class SeqSearch {
+    public static void main(String[] args){
+        //1、定义一个字符串数组
+        //2、接受用户输入，遍历数组，逐一比较，发现相等，提示信息，并break
+        String[] names = {"白眉鹰王","金毛狮王","紫衫龙王","青翼蝠王"};
+        Scanner myScanner = new Scanner(System.in);
+        System.out.println("请输入名字");
+        String findName = myScanner.next();
+        //添加索引——一个经典的编程思想
+        int index = -1;
+        //遍历数组，逐一比较
+        for(int i = 0; i < names.lengh; i++){
+            //比较字符串equals
+            if(findName.equals(names[i])){
+                System.out.println("恭喜你找到" + findName);
+                System.out.println("下标为" + i);
+                //把 i 保存到index
+                index = i;
+                break;
+            }
+        }
+        if(index == -1){
+            System.out.println("不好意思，没有找到");
+        }
+    }
+}
+
+```
 
